# battleship

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  readme.txt
cmake/: ABY.CMakeLists.txt.in  ENCRYPTO_utils.CMakeLists.txt.in  ExternalCrypto++.cmake  ExternalFlatBuffers.cmake  ExternalJson.cmake  External_ABY.cmake  External_Beast.cmake  External_Crypto++.cmake  External_ENCRYPTO_utils.cmake  External_FlatBuffers.cmake  External_MIRACL.cmake  External_OTExtension.cmake  External_json.cmake  OTExtension.CMakeLists.txt.in
src/: CMakeLists.txt  Makefile  battleship.cpp  board.cpp  board.hpp  board_window.cpp  board_window.hpp  commitment.cpp  commitment.hpp  committer.hpp  connection.hpp  dummy_connection.cpp  dummy_connection.hpp  game.cpp  game.hpp  game_communicator.cpp  game_communicator.hpp  game_screen.cpp  game_screen.hpp  hash_committer.cpp  hash_committer.hpp  message.fbs  message_window.cpp  naor_committer.cpp  naor_committer.hpp  ncurses_interface.cpp  ncurses_interface.hpp  ncurses_window.cpp  ncurses_window.hpp  options.hpp  stream_connection.cpp  stream_connection.hpp  tcp_connection.cpp  tcp_connection.hpp  test_board.cpp  test_commitment.cpp  test_committer.cpp  test_dummy_connection.cpp  test_game_communicator.cpp  test_hash_committer.cpp  (+12 more)
src/circuits/: aby_party_connection.cpp  aby_party_connection.hpp  battleship_decider.cpp  battleship_decider.hpp  bs_0.cpp  circuit_wrapper.cpp  circuit_wrapper.hpp  commitment.cpp  commitment.hpp  decider_example_0.cpp  decider_example_0.hpp  example_decider.cpp  example_decider.hpp  keccak.cpp  keccak.hpp  lang_decider.cpp  lang_decider.hpp  proof.cpp  proof.hpp  test_bd.cpp  test_ed.cpp  test_mux.cpp  test_proof.cpp  test_td.cpp  trivial_decider.cpp  trivial_decider.hpp
src/circuits/common/: bs_0.cpp  bs_0.h
src/crypto/: commitment.fbs  committer.cpp  committer.hpp  hash_committer.cpp  hash_committer.hpp  keccak.cpp  keccak.hpp  keccak_state.cpp  keccak_state.hpp  keccak_test_vectors.cpp  keccak_test_vectors.hpp  naor_committer.cpp  naor_committer.hpp
src/game/: battleship.cpp  board.cpp  board.hpp  except.hpp  game.cpp  game.fbs  game.hpp  game_communicator.cpp  game_communicator.hpp
src/misc/: options.cpp  options.hpp  queue.hpp  time.cpp  time.hpp  util.cpp  util.hpp
src/network/: connection.hpp  dummy_connection.hpp  tcp_connection.cpp  tcp_connection.hpp
src/test/: test_battleship_decider.cpp  test_board.cpp  test_committer.cpp  test_decider.hpp  test_dummy_connection.cpp  test_example_decider.cpp  test_game_communicator.cpp  test_hash_committer.cpp  test_keccak.cpp  test_keccak_circuit.cpp  test_keccak_helper.hpp  test_misc.cpp  test_naor_committer.cpp  test_queue.cpp  test_trivial_decider.cpp
src/ui/: board_window.cpp  board_window.hpp  game_screen.cpp  game_screen.hpp  message_window.cpp  message_window.hpp  ncurses_interface.cpp  ncurses_interface.hpp  ncurses_window.cpp  ncurses_window.hpp  user_interface.hpp  web_interface.cpp  web_interface.hpp  websocket_connection.cpp  websocket_connection.hpp
src/web/: index.html
src/web/css/: battleship.css
src/web/js/: battleship.js
